# CMSIS_DAP_STM32L412_Port

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  STM32L412.ld  gcc-arm-none-eabi.cmake
inc/: DAP_config.h  DAP_user_defines.h  bsp.h  ms_os_20_desc.h  ms_os_20_request.h  usbd_dap.h  usbd_dap_desc.h
src/: bsp.c  main.c  usbd_dap.c  usbd_dap_desc.c
